@@ -14,6 +14,7 @@ public enum SoundType {
     ABILITY_ACTIVATED_GENERIC,
     ABILITY_ACTIVATED_BERSERK,
     BLEED,
+    GLASS,
     TIRED;
 
     public boolean usesCustomPitch()
